# code-decisions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  LICENSE  Makefile  README.md  good-first-issues.md  lib.sh  pyproject.toml  schema.sql
.claude-plugin/: marketplace.json  plugin.json
.claude/decisions/: append-only-decisions.md  bash-dispatch-fast-paths.md  capture-nudge-corroboration-requirement.md  dispatch-errors-never-break-claude.md  fts5-search-pipeline.md  git-is-the-history-layer.md  incremental-sync-over-full-rebuild.md  markdown-source-of-truth.md  merge-tags-stats-into-list.md  no-capture-confirmation.md  policy-evaluation-order.md  pure-methods-on-store.md  query-preseed-hook-for-skill.md  search-skill-prefer-preseeded.md  semver-versioning.md  session-state-in-tmp.md  single-skill-entry-point.md  skill-hook-cli-boundary.md  stale-path-all-decisions.md  stdlib-only-in-src.md  stop-hook-nudge-for-decision-capture.md  tag-summary-over-per-decision-listing.md  team-first-decisions.md
.claude/rules/: decisions.md
.engram/: .gitignore  config.toml
.engram/decisions/: 2026-03-16-add-ci-workflow-security-policy-funding-faq-and-go.md  2026-03-16-fix-ci-install-homebrew-sqlite-with-fts5-on-macos.md  2026-03-16-remove-good-first-issues-md-from-repo.md  add-automatic-context-injection.md  add-ci-workflow-security-policy-funding-faq-and-go.md  add-reindex-skill.md  add-six-hooks-for-decision-capture.md  add-status-field.md  add-stop-hook-enforce-signals.md  add-timestamps-require-sections.md  add-visualize-skill.md  convert-engram-py-monolith-to-python-package.md  convert-engram-py-to-package.md  enforce-decision-structure-with-mandatory-why.md  enforce-signal-integrity-hooks.md  enrich-decision-signals-add-make-dev-target-fix-ba.md  enrich-signals-add-make-dev-fix-backfill-links.md  fix-buggy-prompt-hooks-enforce-json-format-remove-.md  fix-ci-install-homebrew-sqlite-with-fts5-on-macos.md  fix-ci-replace-macos-only-sed-i-with-portable-temp.md  fix-skill-prefix-replace-engram-with-engram-standa.md  flatten-repo-add-dev-tooling.md  flatten-repo-structure-and-add-dev-tooling-pytest-.md  formalize-policy-layer-replace-12-shell-hooks-with.md  formalize-policy-layer.md  git-opt-in.md  introduce-signal-dataclass-and-engramstore-class.md  migrate-core-lib-bash-to-python.md  migrate-engram-core-library-from-bash-to-python.md  migrate-signal-frontmatter-from-yaml-to-toml.md  polish-schema-for-release-merge-valid-status-remov.md  polish-schema-for-release.md  pre-commit-gate-hook.md  reduce-signal-bloat-fewer-higher-quality-decisions.md  remove-good-first-issues-md-from-repo.md  remove-old-engram-decisions-files-left-over-from-d.md  remove-visualize-skill-bloat-without-core-value.md  reorganize-repo-to-plugin-marketplace-structure.md  resolve-commit-signal-redundancy.md  simplify-engram-to-decisions-only-remove-finding-a.md  (+5 more)
.engram/signals/: decision-add-automatic-context-injection.md  decision-add-ci-workflow-security-policy-funding-faq-and-go.md  decision-add-reindex-skill.md  decision-add-six-hooks-for-decision-capture.md  decision-add-visualize-skill.md  decision-fix-ci-install-homebrew-sqlite-with-fts5-on-macos.md  decision-remove-good-first-issues-md-from-repo.md  decision-remove-old-engram-decisions-files-left-over-from-d.md  decision-reorganize-repo-to-plugin-marketplace-structure.md  decision-resolve-commit-signal-redundancy.md
.github/: FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
hooks/: session-end.sh  session-start.sh
plugin/engram/: __init__.py  __main__.py  _commits.py  _constants.py  _frontmatter.py  _helpers.py  _policy_defs.py  _validate.py  policy.py  signal.py  store.py
plugin/hooks/: dispatch.sh
plugin/schemas/: default-config.toml  schema.sql
plugin/skills/backfill/: SKILL.md
plugins/engram/: .gitignore  README.md  engram.py  lib.sh  schema.sql
scripts/: bump-version.sh  clean.sh  dev.sh  sync_skip_patterns.py
src/: LICENSE
src/.claude-plugin/: plugin.json
src/decision/: __init__.py  __main__.py  _version.py  cli.py
src/decision/utils/: git.py  (+7 more)
src/hooks/: dispatch.sh  hooks.json
tests/: conftest.py  run_tests.sh  test_affects.py  test_capture_nudge.py  test_cli.py  test_concurrency.py  test_content_validation.py  test_contradiction.py  test_decision.py  test_dispatch_integration.py  test_e2e.py  test_edit_checkpoint.py  test_edit_validation.py  test_engram.py  test_engram.sh  test_git.py  test_impl_nudge.py  test_index.py  test_mopup.py  test_nudge_budget.py  test_plan_nudge.py  test_policy.py  test_policy_engine.py  test_policy_ordering.py  test_query_preseed.py  test_related_context.py  test_scale.py  test_search_formatting.py  test_seeds.py  test_session_context.py  test_session_init.py  test_similarity.py  test_stop_nudge.py  test_validate.py
(+80 files in other folders)
