[project]
name = "engram-dev"
requires-python = ">=3.11"
version = "0.0.0"

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "pre-commit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
strict_markers = true
pythonpath = ["plugin"]
addopts = "--cov=engram --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["engram"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py311"
src = ["plugin"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM102", "SIM105", "SIM108", "SIM110"]

[tool.mypy]
python_version = "3.11"
mypy_path = "plugin"
packages = ["engram"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
